--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using New_folder
-@namespace New_folder.Pages
+﻿@using mywebapp
+@namespace mywebapp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
